--- a/Tugas Akhir/css/style.css
+++ b/Tugas Akhir/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("../img/bookkk.jpg");
-  background-color: #074359;
+  background-color: #52a8d0;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
